--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,6 +5,7 @@ allow_duplicates: true
 galaxy_info:
   author: Siamak Sadeghianfar
   description: Istio and Jaeger for OpenShift
+  role_name: openshift_istio
   company: "Red Hat"
   license: "license (BSD, MIT)"
   min_ansible_version: 2.3
