--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,12 +1,16 @@
-istio_version: 0.8.0
+maistra_version: maistra-0.1.0-ocp-3.1.0-istio-1.0.0
 
 openshift_master_public: https://127.0.0.1:8443
 openshift_cli: oc
-openshift_version: v3.9.0
 
 kiali_username: admin
 kiali_password: admin
 
 enable_istio_auth: false
 
-istio_installer_template: https://raw.githubusercontent.com/openshift-istio/openshift-ansible/istio-3.10-{{ istio_version }}/istio/istio_installer_template.yaml
+product_images: false
+
+masitra_base_url: https://raw.githubusercontent.com/Maistra/openshift-ansible/{{ maistra_version }}/istio
+installer_community: "{{ masitra_base_url }}/istio_community_operator_template.yaml"
+installer_product: "{{ masitra_base_url }}/istio_product_operator_template.yaml"
+installer_cr: "{{ masitra_base_url }}/cr-full.yaml"
