--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,8 +4,8 @@ allow_duplicates: true
 
 galaxy_info:
   author: Siamak Sadeghianfar
-  description: Istio and Jaeger for OpenShift
-  role_name: openshift_istio
+  description: Maistra (Istio, Jaeger and Kiali) for OpenShift
+  role_name: openshift_maistra
   company: "Red Hat"
   license: "license (BSD, MIT)"
   min_ansible_version: 2.3
@@ -15,6 +15,8 @@ galaxy_info:
     - any
   galaxy_tags:
     - openshift
+    - maistra
     - istio
     - jaeger
+    - kiali
     - servicemesh
