--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,31 +1,45 @@
 ---
-## Istio and Jaeger Install
 
-- name: check if istio deployed 
-  shell: "{{ openshift_cli }} get project istio-system"
+- name: check if user is cluster admin
+  shell: "{{ openshift_cli }} get project default"
+  register: default_project_result
+  ignore_errors: true
+  changed_when: false
+
+- fail:
+    msg: "User does not have cluster-admin rights to install Istio"
+  when: default_project_result is failed
+
+- name: check if istio operator deployed 
+  shell: "{{ openshift_cli }} get project istio-operator"
   register: istio_project_result
   ignore_errors: true
   changed_when: false
 
-- name: create istio-system project
-  shell: |
-    {{ openshift_cli }} new-project istio-system
-    {{ openshift_cli }} create sa openshift-ansible -n istio-system
-    {{ openshift_cli }} adm policy add-scc-to-user privileged -z openshift-ansible -n istio-system
-    {{ openshift_cli }} adm policy add-cluster-role-to-user cluster-admin -z openshift-ansible -n istio-system
+- name: create istio operator project
+  shell: "{{ openshift_cli }} new-project istio-operator"
   when: istio_project_result is failed
 
-- name: install istio 
-  shell: |
-    {{ openshift_cli }} new-app {{ istio_installer_template }} \
-        --param=OPENSHIFT_ISTIO_MASTER_PUBLIC_URL={{ openshift_master_public }} \
-        --param=OPENSHIFT_ISTIO_KIALI_USERNAME={{ kiali_username }} \
-        --param=OPENSHIFT_ISTIO_KIALI_PASSWORD={{ kiali_password }} \
-        --param=OPENSHIFT_ISTIO_INSTALL_AUTH={{ enable_istio_auth }} \
-        --param=OPENSHIFT_RELEASE={{ openshift_version }} \
-        --param=OPENSHIFT_ISTIO_IMAGE_VERSION={{ istio_version }} \
-        -n istio-system
-  when: istio_project_result is failed
+
+- name: install openshift service mesh (product istio) operator
+  shell: "{{ openshift_cli }} new-app -f {{ installer_product }} --param=OPENSHIFT_ISTIO_MASTER_PUBLIC_URL={{ openshift_master_public }} -n istio-operator"
+  when: 
+    - istio_project_result is failed
+    - product_images|bool
+
+- name: install maistra (community istio) operator
+  shell: "{{ openshift_cli }} new-app -f {{ installer_community }} --param=OPENSHIFT_ISTIO_MASTER_PUBLIC_URL={{ openshift_master_public }} -n istio-operator"
+  when: 
+    - istio_project_result is failed
+    - not product_images|bool
+
+- template:
+    src: "{{ role_path }}/templates/istio-cr.yaml.j2"
+    dest: /tmp/istio-cr.yaml
+    force: true
+
+- name: install istio
+  shell: "{{ openshift_cli }} create -f /tmp/istio-cr.yaml -n istio-operator"
 
 - name: wait for istio sidecar-injector to initialize
   shell: "{{ openshift_cli }} get deployment istio-sidecar-injector -o jsonpath='{.status.availableReplicas}' -n istio-system"
